centos-kafka + mysql connector

--- a/centos-kafka/kafka_2.13-3.1.0/config/connect-distributed.properties
+++ b/centos-kafka/kafka_2.13-3.1.0/config/connect-distributed.properties
@@ -70,7 +70,7 @@ offset.flush.interval.ms=10000
 # Specify hostname as 0.0.0.0 to bind to all interfaces.
 # Leave hostname empty to bind to default interface.
 # Examples of legal listener lists: HTTP://myhost:8083,HTTPS://myhost:8084"
-#listeners=HTTP://:8083
+# listeners=HTTP://localhost:8083
 
 # The Hostname & Port that will be given out to other workers to connect to i.e. URLs that are routable from other servers.
 # If not set, it uses the value for "listeners" if configured.
@@ -86,4 +86,5 @@ offset.flush.interval.ms=10000
 # c) directories immediately containing the package directory structure of classes of plugins and their dependencies
 # Examples: 
 # plugin.path=/usr/local/share/java,/usr/local/share/kafka/plugins,/opt/connectors,
-#plugin.path=
+rest.port=8083
+plugin.path=/usr/local/kafka-connect
